Finalizado o front do projeto

--- a/Cardapio.html
+++ b/Cardapio.html
@@ -12,14 +12,15 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="index.css">
-    <title>Pizzaria</title>
+    <link rel="icon" type="imagem/png" href="assets/img/pizza.svg" />
+    <title>PizzaFlavor</title>
 </head>
 
 <body>
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg pb-4" style="background-color: #EE5A24; height: 150px;">
-        <a class="navbar-brand text-light" href="">Login</a>
+        <a class="navbar-brand text-light" href="index.html" style="font-size: 40px;">PizzaFlavor</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
