Projeto com crud em construção

--- a/promocoesProduto.html
+++ b/promocoesProduto.html
@@ -68,7 +68,7 @@
                         <div class="form-group ml-3 mt-5" style="background-color: honeydew;">
                             <div class="d-flex justify-content-start">
                                 <a href="sistemaDesktop.html" class="btn btn-info mr-3 w-50" style="background-color: #ababab; border: 0;">Cancelar</a>
-                                <a type="button" href="adicionarProduto.html" style=" background-color: #EE5A24; height: 40px; " class="btn text-light w-50">Adicionar promoção</a>
+                                <a type="button" style=" background-color: #EE5A24; height: 40px; " class="btn text-light w-50">Adicionar promoção</a>
 
                             </div>
                         </div>
